# programas-ferrofluidos

./: .gitignore  LICENSE.md  README.md
Draw-spheres_fixed-N/: Makefile  configuration-nm.txt  draw-spheres  draw-spheres.c
Exercicios-esfera/: CMakeLists.txt  Exercicios_Esfera  Makefile  MovimentoEsfera.cpp  caixa.txt  funcoes.h  move_txt_file.sh  particula.h  plot_graph.sh  variaveis.txt
Visualiza_esferas_orientadas/: Makefile  visualizaEsferas.c
simulation/: CMakeLists.txt  MovimentoEsfera.cpp  funcoes.h  move_txt_file.sh
visualize-spheres/: Makefile  visualizaEsferas.c
